change background based on media queries

--- a/style.css
+++ b/style.css
@@ -159,3 +159,17 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
+/* media queries 
+o @media só funciona quando, no html, há a seguinte linha (linha 13 no index.html): 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+
+    .light {
+      --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+  }
+}
